# game-programming-25

./: .gitmodules  CMakeLists.txt
data/shader/: phong.frag.spv  phong.vert.spv
data/shader_source/: phong.frag  phong.vert
exercises/: CMakeLists.txt  E00_introduction.cpp  E02_collisions.cpp  E04_physics.cpp  E08_3D_rendering.cpp  E08_3D_rendering.md
exercises_solutions/: CMakeLists.txt  ES01_rendering.cpp  ES03_coordinate_systems.cpp  ES04.1.1_shooting_game.cpp  ES04.1.2_pool_game.cpp  ES04.1.3_platformer_game.cpp  ES04.2_physics_step.cpp  ES05_animation_and_audio.cpp  ES05_entity_implementations.inl  ES05_sys_audio.hpp  ES06_ui.cpp  ES08_3D_rendering.cpp
lib/itu/: itu_common.hpp  itu_default_systems.cpp  itu_entity_storage.cpp  itu_entity_storage.hpp  itu_lib_debug_ui.hpp  itu_lib_engine.hpp  itu_lib_imgui.hpp  itu_lib_math.hpp  itu_lib_render3d.hpp  itu_lib_render3d.hpp.bak_imgui_wrong_pipeline  itu_lib_render3d.hpp.bak_single_buffer  itu_lib_render3d.hpp.broken  itu_lib_transform.hpp  itu_resource_storage.cpp  itu_resource_storage.hpp  itu_unity_include.hpp
playground/: lib_simple_profiler.h  test_sorts.cpp
